[gd_scene load_steps=5 format=3 uid="uid://dmm1oev1lo72t"]

[ext_resource type="PackedScene" uid="uid://ctfgfelg0sho8" path="res://src/Tools/BaseTool.tscn" id="1_ppngp"]
[ext_resource type="Script" uid="uid://bsfqeyfc7cifm" path="res://src/Tools/DesignTools/SkeletonTool.gd" id="1_wwq80"]
[ext_resource type="PackedScene" uid="uid://bbnqcxa20a5a5" path="res://src/UI/Nodes/Sliders/ValueSliderV2.tscn" id="3_d5th2"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/Sliders/ValueSlider.tscn" id="4_m4bea"]

[node name="SkeletonOptions" instance=ExtResource("1_ppngp")]
script = ExtResource("1_wwq80")

[node name="Section3" type="HBoxContainer" parent="." index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Section3" index="0"]
layout_mode = 2
text = "General"

[node name="HSeparator" type="HSeparator" parent="Section3" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="." index="3"]
layout_mode = 2
columns = 2

[node name="LiveUpdateCheckbox" type="CheckBox" parent="GridContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "(Enabled) The update happens continuously
as the bone is modified

(Disabled) The update only happens at the end of modification."

[node name="Label" type="Label" parent="GridContainer" index="1"]
layout_mode = 2
tooltip_text = "(Enabled) The update happens continuously
as the bone is modified

(Disabled) The update only happens at the end of modification."
mouse_filter = 1
text = "Live Update (slower)"

[node name="IncludeChildrenCheckbox" type="CheckBox" parent="GridContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Manipulations done through the buttons below
will also propagate down the child bones one by one.

Note that transformations are done to children redardless of
the state of this checkbox. For example resetting a bone with
this checkbox enabled will reset it's children as well, otherwise
the children will just move/rotate according to new state of the
bone"
button_pressed = true

[node name="Label2" type="Label" parent="GridContainer" index="3"]
layout_mode = 2
tooltip_text = "Manipulations done through the buttons below
will also propagate down the child bones one by one.

Note that transformations are done to children redardless of
the state of this checkbox. For example resetting a bone with
this checkbox enabled will reset it's children as well, otherwise
the children will just move/rotate according to new state of the
bone"
mouse_filter = 1
text = "Include bone children"

[node name="AllowChaining" type="CheckBox" parent="GridContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "When enabled, it will be possible to displace bone and
rotate it's parent at the same time (like a chain)."

[node name="Label3" type="Label" parent="GridContainer" index="5"]
layout_mode = 2
tooltip_text = "When enabled, it will be possible to displace bone and
rotate it's parent at the same time (like a chain)."
mouse_filter = 1
text = "Allow Chaining"

[node name="ChainingOptions" type="VBoxContainer" parent="." index="4"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ChainingOptions" index="0"]
layout_mode = 2

[node name="InverseKinematics" type="CheckBox" parent="ChainingOptions/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label4" type="Label" parent="ChainingOptions/HBoxContainer" index="1"]
layout_mode = 2
text = "Inverse Kinematics"

[node name="IKOptions" type="VBoxContainer" parent="ChainingOptions" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="ChainingOptions/IKOptions" index="0"]
layout_mode = 2
text = "Algorithm:"

[node name="AlgorithmOption" type="OptionButton" parent="ChainingOptions/IKOptions" index="1"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "FABRIK"
popup/item_0/id = 0
popup/item_1/text = "CCDIK"
popup/item_1/id = 1

[node name="ChainSize" parent="ChainingOptions/IKOptions" index="2" instance=ExtResource("4_m4bea")]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 2.0
allow_greater = true
prefix = "Max Chain Size:"

[node name="IKIterations" parent="ChainingOptions/IKOptions" index="3" instance=ExtResource("4_m4bea")]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 20.0
allow_greater = true
prefix = "Iterations:"

[node name="IKErrorMargin" parent="ChainingOptions/IKOptions" index="4" instance=ExtResource("4_m4bea")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Inverse Kinematic Mode"
max_value = 10.0
value = 1.0
allow_greater = true
prefix = "Error Margin:"
suffix = "px"

[node name="BoneProps" type="VBoxContainer" parent="." index="5"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Section3" type="HBoxContainer" parent="BoneProps" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="BoneProps/Section3" index="0"]
layout_mode = 2
text = "Bone properties"

[node name="HSeparator" type="HSeparator" parent="BoneProps/Section3" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoneLabel" type="Label" parent="BoneProps" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Name:"

[node name="BonePositionSlider" parent="BoneProps" index="2" instance=ExtResource("3_d5th2")]
layout_mode = 2
allow_greater = true
allow_lesser = true
suffix_x = "px"
suffix_y = "px"

[node name="BoneRotationSlider" parent="BoneProps" index="3" instance=ExtResource("4_m4bea")]
layout_mode = 2
max_value = 360.0
step = 0.01
allow_greater = true
allow_lesser = true
prefix = "Rotation:"
suffix = "°"

[node name="Section" type="HBoxContainer" parent="." index="6"]
layout_mode = 2

[node name="Label" type="Label" parent="Section" index="0"]
layout_mode = 2
text = "Reset"

[node name="HSeparator" type="HSeparator" parent="Section" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RotationReset" type="MenuButton" parent="." index="7"]
layout_mode = 2
tooltip_text = "Resets the rotation of selected bones"
text = "Bone Rotation"
flat = false

[node name="PositionReset" type="MenuButton" parent="." index="8"]
layout_mode = 2
tooltip_text = "Resets the position of selected bones"
text = "Bone Position"
flat = false

[node name="Section2" type="HBoxContainer" parent="." index="9"]
layout_mode = 2

[node name="Label" type="Label" parent="Section2" index="0"]
layout_mode = 2
text = "Skeleton"

[node name="HSeparator" type="HSeparator" parent="Section2" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuickSetBones" type="MenuButton" parent="." index="10"]
layout_mode = 2
tooltip_text = "Quickly place bones over their respective sprites."
text = "Quick Set Bones"
flat = false

[node name="CopyPoseFrom" type="MenuButton" parent="." index="11"]
layout_mode = 2
tooltip_text = "Copies properties of selected bones from chosen frame to current frame."
text = "Copy Pose From"
flat = false

[node name="Section4" type="HBoxContainer" parent="." index="12"]
layout_mode = 2

[node name="Label" type="Label" parent="Section4" index="0"]
layout_mode = 2
text = "Interpolation"

[node name="HSeparator" type="HSeparator" parent="Section4" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Warn" type="Button" parent="Section4" index="2"]
layout_mode = 2
text = "[⚠️]"
flat = true

[node name="TweenSkeleton" type="MenuButton" parent="." index="13"]
layout_mode = 2
tooltip_text = "Gererates In-Betweens from a chosen start frame to the current frame."
text = "Tween Skeleton"
flat = false

[connection signal="toggled" from="GridContainer/LiveUpdateCheckbox" to="." method="_on_live_update_toggled"]
[connection signal="toggled" from="GridContainer/IncludeChildrenCheckbox" to="." method="_on_include_children_checkbox_toggled"]
[connection signal="toggled" from="GridContainer/AllowChaining" to="." method="_on_allow_chaining_toggled"]
[connection signal="toggled" from="ChainingOptions/HBoxContainer/InverseKinematics" to="." method="_on_inverse_kinematics_toggled"]
[connection signal="item_selected" from="ChainingOptions/IKOptions/AlgorithmOption" to="." method="_on_algorithm_selected"]
[connection signal="value_changed" from="ChainingOptions/IKOptions/ChainSize" to="." method="_on_chain_size_value_changed"]
[connection signal="value_changed" from="ChainingOptions/IKOptions/IKIterations" to="." method="_on_ik_iterations_value_changed"]
[connection signal="value_changed" from="ChainingOptions/IKOptions/IKErrorMargin" to="." method="_on_ik_error_margin_value_changed"]
[connection signal="value_changed" from="BoneProps/BonePositionSlider" to="." method="_on_position_changed"]
[connection signal="value_changed" from="BoneProps/BoneRotationSlider" to="." method="_on_rotation_changed"]
[connection signal="about_to_popup" from="RotationReset" to="." method="_on_rotation_reset_menu_about_to_popup"]
[connection signal="about_to_popup" from="PositionReset" to="." method="_on_position_reset_menu_about_to_popup"]
[connection signal="about_to_popup" from="QuickSetBones" to="." method="_on_quick_set_bones_menu_about_to_popup"]
[connection signal="about_to_popup" from="CopyPoseFrom" to="." method="_on_copy_pose_from_about_to_popup"]
[connection signal="pressed" from="Section4/Warn" to="." method="_on_warn_pressed"]
[connection signal="about_to_popup" from="TweenSkeleton" to="." method="_on_tween_skeleton_about_to_popup"]
